--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">ComposeTemplate</string>
+    <string name="msg_enter_optional_password">Enter optional password</string>
+    <string name="title_password">Password</string>
+    <string name="msg_enter_optional_username">Enter optional username</string>
+    <string name="title_username">Username</string>
+    <string name="msg_login_to_continue">Login, to continue</string>
+    <string name="title_posts">Posts</string>
+    <string name="msg_loading">\"Loading.... \"</string>
+    <string name="msg_no_posts_found">No posts found</string>
+    <string name="title_refresh">Refresh</string>
+    <string name="title_continue">Continue</string>
+    <string name="sign_with_github">SIGN IN WITH GITHUB</string>
+    <string name="github_terms_of_use_url">https://docs.github.com/en/github/site-policy/github-terms-of-service</string>
+    <string name="github_privacy_policy_url">https://docs.github.com/en/github/site-policy/github-privacy-statement</string>
 </resources>
